--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     margin: 0;
     text-align: center;
-    font-family: 'Roboto', arial;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .container {
@@ -11,19 +11,9 @@ body {
     flex-direction: column
 }
 
-/* Navbar */
-
-.navbar {
-    display: flex;
-    color: #F9FAF8;
-    background-color: #1f2937;
-    padding: 20px 0px 20px 100px;
-    align-items: center;
-}
-
 .header-logo {
     margin-right: auto;
-    font-size: 25px;
+    font-size: 24px;
     font-weight: bold;
 }
 
@@ -33,21 +23,29 @@ body {
     padding: 0px 100px 0px 0px;
 }
 
+.bx-navbar {
+    display: flex;
+    color: #F9FAF8;
+    background-color: #1f2937;
+    padding: 20px 0px 20px 100px;
+    align-items: center;
+}
+
 .header-links a {
     text-decoration: none;
     color: #e5e7eb;
     font-size: 18px;
     padding: 10px;
-    font-family: 'Roboto' arial;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.hero {
+.bx-hero {
     display: flex;
     color: #f9faf8;
     background-color: #1f2937;
     align-items: center;
     justify-content: center;
-    padding: 90px;
+    padding: 100px;
 }
 
 .hero-cta {
@@ -59,7 +57,7 @@ body {
 }
 
 .hero-cta p {
-    font-family: 'Roboto', arial;
+    font-family: Arial, Helvetica, sans-serif;
     opacity: 0.7;
 }
 
@@ -82,127 +80,195 @@ h1 {
     font-weight: bold;
     color: #f9faf8;
     margin: 0;
-    font-family: 'Roboto', arial;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.hero button {
+.hero-cta button {
     display: block;
     text-align: center;
     width: 110px;
-    border: none;
     background: #3882f6;
     padding: 10px;
     border-radius: 8px;
     color: #FFF;
-    font-family: 'Roboto', arial;
+    font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
     font-weight: bold;
+    font-size: 16px;
+    margin: 2px 2px 2px 2px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
-.hero-image img {
-    width: 500px;
-    height: 350px;
-}
-
-/* Content */
-
-.content {
+.bx-content {
     align-items: center;
+}
+
+.bx-content h2 {
+    font-size: 36px;
+    font-weight: bold;
+    color: #1f2937;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 50px;
 }
 
 .content-info {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    color: #1f2937;
+    padding-bottom: 100px;
 }
 
 .content-info img {
-    width: 200px;
-    height: 200px;
+    width: 175px;
+    height: 175px;
     object-fit: cover;
     border: 4px solid #3882f6;
     border-radius: 15px;
     margin: 5px 20px 0px 20px;
 }
 
-/* Quotation */
-
-.quote {
+.content-info p {
+    width: 200px;
     display: flex;
-    flex-direction: column;
-    background-color: #e5e7eb;
-    padding: 0 200px;
+    justify-content: center;
+    flex-wrap: wrap;
+    color: grey;
+    font-size: 18px;
+    margin: 5px 20px 0px 20px;
 }
 
-.quote p {
+/* Quotation */
+
+.bx-quote {
+    padding-top: 100px;
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    background-color: #e5e7eb;
+}
+
+.quote-cta {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    background-color: #e5e7eb;
+}
+
+.bx-quote p {
+    display: flex;
+    justify-content: center;
+    width: 900px;
+    margin: 5px 20px 0px 20px;
     font-size: 36px;
     color: #1f2937;
     font-style: italic;
+    text-align: left;
     font-weight: lighter;
-    font-family: 'Roboto', arial;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.quote b {
-    padding-bottom: 20px;
-    padding-right: 10px;
-    font-family: 'Roboto', arial;
-    text-align: right;
+.quote-name {
+    display: flex;
+    justify-content: right;
+    width: 900px;
+    margin-right: 100px;
+    font-size: 24px;
+    font-weight: bold;
+    color: #1f2937;
+    font-style: normal;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 100px;
 }
 
 /* Sign Up */
-.sign-up {
-    background-color: #3882f6;
-    margin: 50px 200px;
-    padding: 10px 80px;
+.bx-sign {
+    margin: 100px 0 100px 0;
     display: flex;
-    align-items: center;
     justify-content: center;
-    border-radius: 5px;
-    border-color: none;
+    flex-wrap: wrap;
 }
 
-.sign-items {
-    flex: 1;
-}
-
-.sign-text {
-    text-align: left;
-}
-
-.sign-text p {
-    color: #fff;
-    opacity: 0.7;
-    margin: 5px 30px 30px 50px;
-}
-
-.sign-up button {
-    display: block;
-    text-align: center;
-    width: 110px;
-    border: 2px solid #FFF;
-    border-radius: 15px;
-    background: #3882f6;
-    padding: 10px;
+.sign-cta {
+    flex-direction: column;
+    padding-left: 75px;
+    padding-right: 100px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     border-radius: 8px;
-    color: #FFF;
-    font-family: 'Roboto', arial;
-    text-decoration: none;
-    font-weight: bold;
+    display: flex;
+    justify-content: left;
+    border-radius: 10px 0 0 10px;
+    border-color: none;
+    font-size: 24px;
+    background-color: #3882F6;
 }
 
-h3 {
+.sign-cta h3 {
     color: #fff;
-    font-family: 'Roboto', arial;
+    text-align: left;
+    justify-content: left;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 24px;
     padding: 0;
     margin: 30px 0px 0px 50px;
 }
 
+.sign-cta p {
+    text-align: left;
+    justify-content: left;
+    color: #fff;
+    font-size: 18px;
+    opacity: 0.7;
+    margin: 5px 30px 30px 50px;
+}
+
+.sign-button {
+    flex-basis: 30px;
+    background-color: #3882F6;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0 10px 10px 0;
+    padding: 25px;
+    padding-left: 50px;
+    padding-right: 75px;
+}
+
+.button-box {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.button-box button {
+    display: flex;
+    text-align: center;
+    width: 110px;
+    background: #3882f6;
+    padding: 10px;
+    border-radius: 8px;
+    color: #FFF;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 16px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-right: 50px;
+    margin-left: 50px;
+}
 
 
 /* Footer */
 
-.footer {
+.bx-footer {
     background-color: #1f2937;
     color: #fff;
-    font-family: 'Roboto', arial;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    padding: 20px;
 }
